--- a/pages/sections/act-detail/act-detail.wxml
+++ b/pages/sections/act-detail/act-detail.wxml
@@ -47,11 +47,11 @@
                   <view style="font-size: 35rpx;" hover-class="weui-cell_active">查看参与者</view>
         </view>
         <view class="bottom-right" bind:tap="editAct">
-                  <image class="arrow" src="/icon/rightArrow.png"></image>
+                  <i-icon type="editor" />
                   <view style="font-size: 35rpx;" hover-class="weui-cell_active">编辑活动</view>
         </view>
         <view class="bottom-right" bind:tap="deleteAct">
-                  <image class="arrow" src="/icon/rightArrow.png"></image>
+                  <i-icon type="delete" />
                   <view style="font-size: 35rpx;" hover-class="weui-cell_active">删除活动</view>
         </view>
       </view>
@@ -98,15 +98,15 @@
       </i-card>
     </view>
     <view class="msg-item" wx:for="{{comment_list}}" wx:key='id'>
-      <i-card i-class="card-demo" title="{{item.user.name}}" extra="{{item.publish_time}}" thumb="{{item.user.avatar}}">
-        <view slot="content">
+      <i-card i-class="card-demo" title="{{item.user.name}}" extra="{{item.publish_time}}" thumb="{{item.user.avatar}}" bindtap="goUser" data-userid="{{item.user.id}}">
+        <view slot="content" catchtap="empty">
           <view>{{item.content}}</view>
           <view wx:if="{{hasBegun && item.score != 0}}">
             <van-rate custom-class="rate" model:value="{{ item.score }}" size="{{ 20 }}"
            readonly allow-half/>
           </view>
         </view>
-        <view slot="footer">
+        <view slot="footer" catchtap="empty">
           <view wx:if="{{item.user.id == userId}}" class="bottom-right" bind:tap="goEditComment" data-comment-id="{{item.id}}">
             <i-icon type="editor" />
             <view class="txt" style="font-size: 35rpx;" hover-class="weui-cell_active"> 编辑</view>
