--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -97,6 +97,10 @@
 
 .card-demo image {
   border-radius: 50%;
+  border: solid 0.05rem #34b3de;
+  height: 101rpx;
+  width: 101rpx;
+  object-fit: scale-down;
 }
 
 
