--- a/pages/sections/act-detail/act-detail.wxml
+++ b/pages/sections/act-detail/act-detail.wxml
@@ -1,12 +1,21 @@
 <!--pages/sections/act-detail/act-detail.wxml-->
 
 <!--活动名称-->
+
+<wxs module="ut">
+  var sub = function(val) {
+    return val.slice(0, 40)
+  }
+  module.exports.sub = sub;
+</wxs>
+
+
 <view class="act-header">
-    <text class="text">{{actInfo.name}}</text>
-    <view wx:if="{{!hasJoined}}" hover-class="weui-cell_active">
+    <text class="text">{{actInfo.name.length <= 40 ? actInfo.name : ut.sub(actInfo.name) + "…"}}</text>
+    <view wx:if="{{!hasJoined && !isBoya}}" hover-class="weui-cell_active">
       <button class='joinBtn' bindtap='joinAct'>报名</button>
     </view>
-    <view wx:elif="{{hasJoined}}" hover-class="weui-cell_active">
+    <view wx:elif="{{hasJoined&& !isBoya}}" hover-class="weui-cell_active">
       <button class='unJoinBtn' bindtap='exitAct'>取消报名</button>
     </view>
 </view>
@@ -15,7 +24,7 @@
 <!--活动信息-->
 <view class="msg-item">
     <i-card i-class="card-demo card-demo-full"  full
-      title="{{actInfo.org ? actInfo.org.name : actInfo.owner.name}}" extra="发布者" thumb="{{actInfo.org ? actInfo.org.avatar : actInfo.owner.avatar}}" bindtap="goOwner">  
+      title="{{isBoya? '' : actInfo.org ? actInfo.org.name : actInfo.owner.name}}" extra="{{isBoya? '' : '发布者'}}" thumb="{{isBoya? '' : actInfo.org ? actInfo.org.avatar : actInfo.owner.avatar}}" bindtap="goOwner">  
       <view slot="content" catchtap="empty">
         <view class="organizer" wx:if="{{actInfo.org}}"><span class="_infor_head" hover-class="weui-cell_active" bindtap="goOrg">活动id：</span>{{actId}}</view>
         <view class="organizer" wx:if="{{actInfo.org}}"><span class="_infor_head" hover-class="weui-cell_active" bindtap="goOrg">所属组织：{{actInfo.org.name}}</span></view>
@@ -29,7 +38,8 @@
         <view class="organizer"><span class="_infor_head">地点：</span> {{actInfo.location? actInfo.location.name : "暂无信息"}}</view>
 
 
-        <view class="organizer"><span class="_infor_head">人数：</span>{{currentNumPeople}} / {{actInfo.contain}}</view>
+        <view class="organizer" wx:if="{{!isBoya}}"><span class="_infor_head">人数：</span>{{currentNumPeople}} / {{actInfo.contain}}</view>
+        <view class="organizer" wx:else><span class="_infor_head">最大人数：</span>{{actInfo.contain}}</view>
 
         <view class="organizer"><span class="_infor_head">活动类型：</span>{{actInfo.type.name}}</view>
         <view class="organizer"><span class="_infor_head">活动描述：</span>{{actInfo.description == "" ? "无" : actInfo.description}}</view>
@@ -61,8 +71,10 @@
      
 </view>
 
+<view wx:if="{{!isBoya}}">
 <button class='middleBtn' bindtap='bindMapButton' style="width:30%; margin-bottom:25rpx; margin-left: 0rpx;">{{showMap ? '隐藏地图' : '显示地图'}}</button>
-<block wx:if="{{showMap}}">
+</view>
+<block wx:if="{{!isBoya && showMap}}">
   <!-- 上一行不能写成view，因为map不能渲染在view内部 -->
   <map id="detailMap"
     style="width: 100%; height: 30%;"
