--- a/pages/my/my-home/my-home.wxml
+++ b/pages/my/my-home/my-home.wxml
@@ -28,6 +28,7 @@
   <view class="item-wrap">
     <navigator wx:for="{{jumpItem}}" wx:key='name' url="{{item.url}}" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
       <view class="weui-cell__bd">{{item.name}}</view>
+      <view wx:if="{{item.notice}}"><i-icon type="prompt_fill" size="28" color="#f00000" /></view>
       <view class="weui-cell__ft weui-cell__ft_in-access"></view>
     </navigator>
   </view>
