add token in upload avatar; update style of org avatar in index and follow

--- a/pages/follows/follows.wxss
+++ b/pages/follows/follows.wxss
@@ -82,9 +82,9 @@
 /*******************************************************/
 
 .card-demo image {
-  border-radius: 50%;
-  height : 150rpx;
-  width: 150rpx;
+  /* border-radius: 50%; */
+  height : 100rpx;
+  width: 100rpx;
 }
 
 .msg-item {
