--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -96,9 +96,9 @@
 }
 
 .card-demo image {
-  border-radius: 50%;
-  height : 150rpx;
-  width: 150rpx;
+  /* border-radius: 50%; */
+  height : 100rpx;
+  width: 100rpx;
 }
 
 
