--- a/pages/my/my-notif/my-notif.wxml
+++ b/pages/my/my-notif/my-notif.wxml
@@ -15,6 +15,17 @@
                     </i-cell> 
                 </block>
             </i-cell-group>
+            <!-- <i-swipeout  i-class="i-swipeout-demo-item" actions="{{actions}}"  bindchange="handleSwipeClick"
+                data-personname="{{item.person.name}}" data-personid="{{item.person.id}}">
+                <view slot="content">
+                    <view class="i-swipeout-image" style="background:#ff9900;">
+                    <image class="mem-avatar" src="{{item.person.avatar}}"  slot="icon"></image>
+                    </view>
+                    <view class="i-swipeout-des">
+                    <view class="i-swipeout-des-h2">{{item.person.name}}</view>
+                    </view>
+                </view>
+            </i-swipeout> -->
         </view>
     </view>
 
