--- a/pages/my/feedback/feedback.wxml
+++ b/pages/my/feedback/feedback.wxml
@@ -33,5 +33,9 @@
 </i-panel>
 <a class="weui-btn weui-btn_primary" bindtap="submitFB">提交</a>
 
-<text>\n\n关于我们：\n一苇以航开发团队\n乐洋 史鑫杰 王肇凯 开聚实 王佳瑞 李永毅</text>
-<text>\n\n版本：1.5.0</text>
+<view style="background : white; margin-top : 100rpx" >
+<view class="bottom">
+<text>关于我们：\n一苇以航开发团队\n乐洋 史鑫杰 王肇凯 开聚实 王佳瑞 李永毅\n\n</text>
+<text>版本：1.5.0</text>
+</view>
+</view>
