--- a/pages/my/feedback/feedback.wxss
+++ b/pages/my/feedback/feedback.wxss
@@ -1,1 +1,8 @@
 /* pages/my/feedback/feedback.wxss */
+
+.bottom {
+  display: block;
+  font-size: 35rpx;
+  margin-top: 10rpx;
+  padding: 10px 10px 10px 10px;
+}
