--- a/pages/my/my-home/my-home.wxml
+++ b/pages/my/my-home/my-home.wxml
@@ -42,8 +42,8 @@
 </view>
 
 <!-- <button bind:tap="toMyAccount" class="Btn accountBtn">个人信息</button>
-<button bind:tap="toMyOrg" class="Btn orgBtn">我管理的组织</button>
-<button bind:tap="toMyAct" class="Btn actBtn">我管理的活动</button>
+<button bind:tap="toMyOrg" class="Btn orgBtn">我的组织</button>
+<button bind:tap="toMyAct" class="Btn actBtn">我的活动</button>
 <button bind:tap="toNewAct" class="Btn pubBtn">活动发布</button>
 <button bind:tap="toFeedback" class="Btn fdbBtn">提交反馈</button>
 <button open-type="share" class="Btn shareBtn">分享小程序</button> -->
