--- a/pages/my/my-notif/my-notif.wxml
+++ b/pages/my/my-notif/my-notif.wxml
@@ -13,12 +13,17 @@
         <view class='title' data-index='0' catchtap='panel'>
         <van-icon name="{{showIndex[0]? 'arrow-down':'arrow'}}" />
         <view class='title_1'>未读通知（{{unreadNotifList.length}}）</view>
+        <view catchtap="readAll" style="margin-left:140rpx; display: flex;" hover-class="weui-cell_active">
+            <view style='font-size:30rpx; margin-top : 5rpx'>全部已读</view>
+            <i-icon type="browse" size="25"/>
         </view>
+        </view>
+
         <view class='actList'  wx:if="{{showIndex[0]}}">
             <i-cell-group i-class="act-wrap">
                 <block wx:for="{{unreadNotifList}}" wx:key="id">
                     <i-cell title="{{item.content.length <= 50 ? item.content : ut.sub(item.content) + '…'}}" label="{{item.relative_time}}" bindclick="goActOrOrg" 
-                        data-act="{{item.act}}" data-org="{{item.org}}" data-idd="{{item.id}}" data-item="{{item}}" is-link="{{item.act || item.org ? true : null}}" value="{{item.act? '查看活动' : item.org ? '查看组织' : '设为已读'}}">
+                        data-act="{{item.act}}" data-org="{{item.org}}" data-idd="{{item.id}}" data-item="{{item}}" is-link="{{item.act || item.org ? true : null}}" value="{{item.act? '查看活动' : item.org ? '查看组织' : '设为已读'}}" >
                     </i-cell> 
                 </block>
             </i-cell-group>
