--- a/pages/my/my-notif/my-notif.wxss
+++ b/pages/my/my-notif/my-notif.wxss
@@ -63,15 +63,15 @@
   margin: 10rpx auto;
 }
 .folder .folder_item .title {
-  font-size: 30rpx;
-  height: 60rpx;
-  line-height: 60rpx;
+  font-size: 35rpx;
+  height: 70rpx;
+  line-height: 70rpx;
   background: #e2e2e2;
   display: flex;
   background: white;
 }
 .folder .folder_item .title .title_1 {
-  width: 630rpx;
+  width: 300rpx;
   height: 60rpx;
   padding-left: 20rpx;
 }
@@ -248,4 +248,19 @@
   height: 20rpx;
   border-radius: 50%;
   background-color: blue;
+}
+
+.joinBtn{
+  width: 80rpx;
+  height: 50rpx;
+  background-color: rgba(176, 177, 177, 0.548);
+  color: rgb(255, 255, 255);
+  border-radius: 49rpx;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: 30rpx;
+  writing-mode: vertical-lr;
+  margin-right: 0%;
 }
