--- a/pages/sections/act-detail/act-detail.wxml
+++ b/pages/sections/act-detail/act-detail.wxml
@@ -26,6 +26,7 @@
     <i-card i-class="card-demo card-demo-full"  full
       title="{{isBoya? '' : actInfo.org ? actInfo.org.name : actInfo.owner.name}}" extra="{{isBoya? '' : '发布者'}}" thumb="{{isBoya? '' : actInfo.org ? actInfo.org.avatar : actInfo.owner.avatar}}" bindtap="goOwner">  
       <view slot="content" catchtap="empty">
+        <!-- <text>{{debugText}}</text> -->
         <view class="organizer" wx:if="{{actInfo.org}}"><span class="_infor_head" hover-class="weui-cell_active" bindtap="goOrg">活动id：</span>{{actId}}</view>
         <view class="organizer" wx:if="{{actInfo.org}}"><span class="_infor_head" hover-class="weui-cell_active" bindtap="goOrg">所属组织：{{actInfo.org.name}}</span></view>
         <view class="organizer" wx:if="{{actInfo.block}}"><span class="_infor_head" hover-class="weui-cell_active" bindtap="goBlock">所属版块：{{actInfo.block.name}}</span></view>
