--- a/pages/sections/act-detail/act-detail.wxml
+++ b/pages/sections/act-detail/act-detail.wxml
@@ -4,7 +4,8 @@
 
 <wxs module="ut">
   var sub = function(val) {
-    return val.slice(0, 40)
+    var length = 10
+    return val.length > length ? val.slice(0, length) : val
   }
   module.exports.sub = sub;
 </wxs>
@@ -24,7 +25,7 @@
 <!--活动信息-->
 <view class="msg-item">
     <i-card i-class="card-demo card-demo-full"  full
-      title="{{isBoya? '' : actInfo.org ? actInfo.org.name : actInfo.owner.name}}" extra="{{isBoya? '' : '发布者'}}" thumb="{{isBoya? '' : actInfo.org ? actInfo.org.avatar : actInfo.owner.avatar}}" bindtap="goOwner">  
+      title="{{isBoya? '博雅活动' : actInfo.org ? actInfo.org.name : actInfo.owner.name}}" extra="{{isBoya? '' : '发布者'}}" thumb="{{isBoya? '' : actInfo.org ? actInfo.org.avatar : actInfo.owner.avatar}}" bindtap="goOwner">  
       <view slot="content" catchtap="empty">
         <!-- <text>{{debugText}}</text> -->
         <view class="organizer" ><span class="_infor_head" hover-class="weui-cell_active" bindtap="goOrg">活动id：</span>{{actId}}</view>
