--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -9,14 +9,16 @@
   module.exports.sub = sub;
 </wxs>
 
+<view wx:if="{{show}}">
 <i-tabs current="{{ current }}" color="#f759ab" bindchange="handleChange">
     <i-tab key="tab1" title="推荐"></i-tab>
     <i-tab key="tab2" title="地图"></i-tab>
 </i-tabs>
+</view>
 
-<view wx:if="{{current == 'tab1'}}">
+<view wx:if="{{current == 'tab1' || !show}}">
   <!--recommend-orgs-->
-  <view class="org-wrap">
+  <view class="org-wrap" wx:if="{{show}}">
     <view class="header">
         <text class="txt">推荐的组织</text>
         <!-- <view class="right" id="0" bindtap="toFollowOrg">
