--- a/pages/my/new-act/new-act.wxml
+++ b/pages/my/new-act/new-act.wxml
@@ -3,7 +3,7 @@
 
     
 
-
+<view wx:if="{{show}}">
 <i-panel title="活动基本信息">
     <!-- <view class="weui-cell weui-cell_active weui-cell_select weui-cell_select-after">
         <view class="weui-cell__hd">
@@ -121,3 +121,8 @@
 </i-panel>
 
 <a class="weui-btn weui-btn_primary" bindtap="submitAct">提交</a>
+</view>
+
+<view wx:else>
+<text>不支持此功能</text>
+</view>
