--- a/pages/my/new-act/new-act.wxml
+++ b/pages/my/new-act/new-act.wxml
@@ -55,7 +55,7 @@
         </view>
         <view class="weui-cell__bd">
             <picker bindchange="bindPicker_1_Change" range="{{categories}}" range-key="name">
-                <view class="weui-select">{{actId == -1 ? categories[index1].name : actInfo.type.name}}</view>
+                <view class="weui-select">{{categories[index1].name}}</view>
             </picker>
         </view>
     </view>
