--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -42,6 +42,7 @@
   <view class="msg-wrap">
     <scroll-view scroll-y="true" class="nav">
       <view class="msg-item" wx:for="{{act_list}}" wx:key='id'>
+        <block wx:if="{{item.block.id == 2 || show}}">
         <i-card i-class="card-demo" title="{{item.org ? item.org.name : item.block.name + '活动'}}" extra='{{item.relative_pub_time}}' thumb="{{item.org ? item.org.avatar : ''}}" bindtap="toActivity" data-actid="{{item.id}}">
           <view slot="content">
             <text calss="title">{{item.name}}</text>
@@ -57,6 +58,7 @@
                 </view>
           </view> -->
         </i-card>
+        </block>
       </view>
     </scroll-view>
   </view>
